# CardiacDiffAE_GWAS

./: .gitattributes  .gitignore  .pylintrc  Dockerfile  README.md  pyproject.toml
GWAS/: create_conf.py  create_covariates.py  engager.py  engagerDS_DXN.py  engagerDS_DXN_AE.py  engagerDS_multiSeed.py  engagerDS_multiSeed_anti.py  engagerDS_multiSeed_anti_proj.py  engagerDSv2.py  engagerDSv2_noNoise.py  generate_visB.py  generate_vis_miami.py  generate_vis_qqm.py  merge_perchr_burdenres.py  merge_perchr_condewas.py  merge_perchr_res.py  obtain_toploci.sh  obtain_toploci_single.sh  prep_latents.py  split_tests.py  tag_rsid.py  tag_rsid_basic.py  template.conf  template_DXN.conf  template_DXN_AE.conf  template_noNoise.conf  template_sbatch.sh  template_sbatch_multi.sh
H5tools/: copy2lmdb.py  copy2zarr.py  create_cropped_DSH5.py  create_masks_DSH5.py  create_toyset.py  traverse_DSH5.py  traverse_DSH5_4nii.py  traverse_embH5.py  utils.py
PRS/: CnT.sh  CnTHeight.sh  CnT_ext.sh  CnT_noext.sh  LDPruning.sh  PLR.sh  PLR_ext.sh  QCnPrune.sh  __init__.py  allpheno_alldisease_multiPRSV2_panCohort.sh  allpheno_alldisease_multiPRS_AUC_panCohort_eval.sh  allpheno_alldisease_multiPRS_panCohort_eval.sh  allpheno_baseline_comparison.sh  allpheno_ldpredbasic_nonDisc_king.sh  allpheno_ldpredbasic_nonDisc_king_aortaIDP.sh  allpheno_ldpredbasic_nonDisc_king_cardiacIDP.sh  allpheno_ldpredbasic_nonDisc_king_inclNonCauc.sh  allpheno_multiPRSset_comparison.sh  baseline_comparison_pipeline.py  bgen2pgen.sh  create_bgen_index.sh  create_sigSNPs.py  customLasso.py  eval_multiPRS.py  eval_multiPRS_V2.py  eval_multiPRS_V2_wCovar.py  example_multi_prs_usage.fish  filteredPLR.sh  filteredPLR_grid.sh  filteredPLR_mulal.sh  getINFO.sh  getINFO_chr.sh  getINFO_parallel.sh  get_info.py  get_infoX.py  getrel.sh  getrelPheno.sh  getrelPheno_replic.sh  gridPLR.sh  launch_allpheno_alldisease_multiPRS.sh  (+14 more)
ProjectPage/: index.html
UKBB/: ukbb_postprocess_errors.py
analyses/: binary_dis_MLAnalyses_disjobs.sh  binary_dis_MLAnalyses_mainlauncher.sh  binary_dis_datasets.py  binary_dis_datasets_launcher.sh  clean_diseases_cardiac.R  (+4 more)
(+99 files in other folders)
