[tool.poetry]
name = "cardiac_diffae_gwas"
version = "0.1.0"
description = "Code repository for cardiac MRI latent phenotyping with 3D diffusion autoencoders, GWAS, and PRS analyses"
authors = ["Soumick Chatterjee <soumick.chatterjee@fht.org>"]
license = "Apache-2.0 license"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = ">=1.21.2,<2"
pandas = "^2.3.1"
h5py = "^3.14.0"
tqdm = "^4.67.1"
statsmodels = "^0.14.5"
scikit-learn = "^1.7.1"
plotly = "^6.2.0"
zarr = "^3.1.0"
simpleitk = "^2.5.2"
tricorder = "^0.1.0"
torch = {version = "^2.7.1+cu118", source = "pytorch"}
scikit-image = "^0.25.2"
matplotlib = ">=3.8,<3.9"
seaborn = "^0.13.2"
wordcloud = "^1.9.4"
nltk = "^3.9.1"
ipykernel = "^6.30.0"
ipywidgets = "^8.1.7"
scikit-learn-intelex = "^2025.7.0"
icd-mappings = "^0.4.0"
gwaslab = "^3.6.6"
pyicd = {git = "https://github.com/pkmklong/pyicd.git"}
pyplink = "^1.3.7"
ldsc = {git = "https://github.com/soumickmj/ldsc.git"}
pandasgwas = "^1.2.2"
lmdb = "^1.7.3"
dask-jobqueue = "^0.9.0"
pyreadr = "^0.5.3"
rds2py = "^0.7.3"
lifelines = "^0.30.0"
pybgen = "^0.7.1"
group-lasso = "^1.5.0"
mlxtend = "^0.23.4"
bgen = "^1.9.0"
openpyxl = "^3.1.5"
xlsxwriter = "^3.2.9"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"
